cabal-version:      3.4
name:               build-tester
version:            0.0.0.0
synopsis:           Build-test packages from a Gentoo repository

tested-with:        GHC == { 9.4.8 }

description:
    A utility for build-testing packages in a gentoo repository. It looks for
    packages from the repo that are not currently installed, chooses one, tries
    to emerge it, then repeats.

    This is intended for development sandboxes which are testing the repository
    ecosystem en-masse (for instance, testing the gentoo-haskell ecosystem
    before keywording a new version of GHC).

homepage:           https://github.com/hololeap/build-tester
bug-reports:        https://github.com/hololeap/build-tester

license:            AGPL-3.0-only
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@protonmail.com
copyright:          Copyright (C) 2025 hololeap
category:           Development
build-type:         Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/hololeap/build-tester
    branch:   main

flag pedantic
    description: Enable -Werror
    default:     False
    manual:      True

common warnings
    ghc-options: -Wall
    if flag(pedantic)
        ghc-options:    -Werror

common exe
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable build-tester
    import:           warnings, exe
    main-is:          Main.hs
    other-modules:
        , Distribution.Gentoo.BuildTest
        , Distribution.Gentoo.BuildTest.Cmd
        , Distribution.Gentoo.BuildTest.Types
        , Distribution.Gentoo.BuildTest.Util
    build-depends:
        , base >=4.16 && <4.22
        , parsable ^>=0.1
        , portage-hs ^>=0.1
        , ansi-terminal ^>=1.1.2
        , ansi-terminal-types ^>=1.1
        , bytestring >=0.11 && <0.13
        , conduit ^>=1.3.6
        , conduit-extra ^>=1.3.7
        , containers >=0.6 && <0.8
        , directory ^>=1.3
        , list-shuffle ^>=1.0.0.1
        , mtl >=2.2 && <2.4
        , parsec ^>=3.1.15.0
        , text >=1.2 && <2.2
        , time >=1.11 && <1.15
        , transformers >=0.5 && <0.7
        , unordered-containers ^>=0.2.20

    hs-source-dirs:   src
    default-language: GHC2021
